# ModelDaemon

./: .gitignore  README.md  README.zh.md  loader.py  model_daemon.py  pyproject.toml  requirements.txt  task.py
examples/: hello_script.py  loader_stub.py
src/modeldaemon/: __init__.py  __main__.py  cli.py  protocol.py  runtime.py  server.py
