[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "modeldaemon"
version = "0.1.0"
description = "Keep heavy models in memory; run scripts in the daemon process with get_model()."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ModelDaemon contributors" }]
dependencies = []

[project.scripts]
modeldaemon = "modeldaemon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
