[project]
name = "modeldaemon"
version = "0.1.0"
description = "Demo: long-lived process caches HF models; run tasks in-process."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers>=4.51.0",
]

# Only lock/sync dependencies — do not install this repo as an importable package.
[tool.uv]
package = false
